<?xml version="1.0"?>
<package format="2">
  <name>tesseract_rviz</name>
  <version>0.21.1</version>
  <description>The tesseract_rviz package</description>
  <maintainer email="Armstrong@todo.todo">Levi Armstrong</maintainer>
  <license>BSD</license>
  <author >Levi Armstrong</author>

  <depend>assimp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>resource_retriever</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>

  <depend>tesseract_qt</depend>

  <depend>tesseract_monitoring</depend>
  <depend>tesseract_rosutils</depend>
  
  <depend>libqt5-core</depend>
  <depend>libqt5-widgets</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/tesseract_rviz_environment_plugin_description.xml"/>
    <rviz plugin="${prefix}/tesseract_rviz_workbench_plugin_description.xml"/>
  </export>
</package>
